[package]

name    = "inotify"
version = "0.11.0"
authors = [
  "Hanno Braun <mail@hannobraun.de>",
  "Félix Saparelli <me@passcod.name>",
  "Cristian Kubis <cristian.kubis@tsunix.de>",
  "Frank Denis <github@pureftpd.org>"
]
edition = "2018"
rust-version = "1.70"

description   = "Idiomatic wrapper for inotify"
documentation = "https://docs.rs/inotify"
repository    = "https://github.com/hannobraun/inotify"
license       = "ISC"
readme        = "README.md"

keywords   = ["inotify", "linux"]
categories = ["api-bindings", "filesystem"]
exclude    = ["/.travis.yml", "/inotify-rs.sublime-project"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci   = { repository = "inotify-rs/inotify" }


[features]
default = ["stream"]
stream = ["futures-core", "tokio"]


[dependencies]
bitflags     = "2"
futures-core = { version = "0.3.1", optional = true }
inotify-sys  = "0.1.3"
libc         = "0.2"
tokio        = { version = "1.0.1", optional = true, features = ["net"] }

[dev-dependencies]
maplit = "1.0"
rand = "0.8"
tempfile     = "3.1.0"
futures-util = "0.3.1"
tokio        = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }

[[example]]
name              = "stream"
required-features = ["stream"]

[[example]]
name = "watch"
