[package]

name    = "inotify"
version = "0.4.2"
authors = [
  "Hanno Braun <mail@hannobraun.de>",
  "Félix Saparelli <me@passcod.name>",
  "Cristian Kubis <cristian.kubis@tsunix.de>",
  "Frank Denis <github@pureftpd.org>"
]

description   = "Idiomatic wrapper for inotify"
documentation = "https://docs.rs/inotify"
repository    = "https://github.com/hannobraun/inotify-rs"
license       = "ISC"
readme        = "../README.md"

keywords   = ["inotify", "linux"]
categories = ["api-bindings", "filesystem"]

[badges]
travis-ci = { repository = "hannobraun/inotify-rs" }

[dependencies]
bitflags    = "0.8"
inotify-sys = { version = "0.1", path = "../inotify-sys" }
libc        = "0.2"

[dev-dependencies]
tempdir = "0.3"
